Support multiple sequences of regular pools in a single evaluation, #435.